// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section It completed props 1`] = `
{
  "$el": "<section class="d-flex flex-shrink-0 align-items-center section-py-80 section-min-h-100">
  <div class="container">
    <div class="row justify-content-center mb-2">
      <div class="text-center col-md-6">
        <h2>title</h2>
        <h3>subtitle</h3>
        <!---->
      </div>
    </div>
  </div>
</section>",
}
`;

exports[`Section It completed props2 1`] = `
{
  "$el": "<section class="d-flex flex-shrink-0 align-items-center section-py-80 section-min-h-100">
  <div class="container">
    <div class="row justify-content-center mb-2">
      <div class="text-center col-md-6">
        <h2>title2</h2>
        <h3>subtitle2</h3>
        <!---->
      </div>
    </div>
  </div>
</section>",
}
`;
